[package]
name = "specs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
console = "0.16.0"
dialoguer = "0.11.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = { version = "0.35.2", features = ["disk", "network"] }
tokio = { version = "1.46.0", features = ["full"] }
